# MiniLogger

./: CMakeLists.txt
examples/: main.cpp
include/: Logger.hpp
src/: Logger.cpp
